--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,63 +1,28 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/ruby:2.6.6-node-browsers
-        environment:
-          - BUNDLER_VERSION: 2.0.2
-          - RAILS_ENV: 'test'
-
-      - image: circleci/mysql:5.7
-        environment:
-          - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
-          - MYSQL_ROOT_HOST: '%'
-
-    working_directory: ~/portfolio_01
-
+    machine:
+      image: circleci/classic:edge
     steps:
       - checkout
-
-      - restore_cache:
-        keys:
-          - v1-dependencies-{{ checksum "Gemfile.lock" }}
-          - v1-dependencies-
-
       - run:
-        name: install dependencies
-        command: |
-          bundle install --jobs=4 --retry=3 --path vendor/bundle
-
-      - save_cache:
-          paths:
-          - ./vendor/bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-
-      - run: mv config/database.yml.ci config/database.yml
-      - run: bundle exec rake db:create
-      - run: bundle exec rake db:schema:load
-
+          name: docker-compose build
+          command: docker-compose build
       - run:
-          name: RuboCop
-          command: bundle exec rubocop
-
+          name: docker-compose up
+          command: docker-compose up -d
       - run:
-          name: Run tests
-          command: |
-            mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
-              circleci tests split --split-by=timings)"
-
-            bundle exec rspec \
-              --format progress \
-              --format RspecJunitFormatter \
-              --out /tmp/test-results/rspec.xml \
-              --format progress \
-              $TEST_FILES
-
-      # collect reports
-      - store_test_results:
-          path: /tmp/test-results
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: test-results
-
+          name: sleep for waiting launch db
+          command: sleep 1
+      - run:
+          name: "before_test: setup db"
+          command: docker-compose run app bundle exec rails db:migrate:reset RAILS_ENV=test
+      - run:
+          name: Rubocop
+          command: docker-compose run app bundle exec rubocop
+      - run:
+          name: Rspec
+          command: docker-compose run app rbundle exec rspec spec
+      - run:
+          name: docker-compose down
+          command: docker-compose down
