--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,14 @@ jobs:
           name: sleep for waiting launch db
           command: sleep 1
       - run:
+          name: "before_test: setup db"
+          command: docker-compose run app rails db:migrate:reset RAILS_ENV=test
+      - run:
           name: Rubocop
           command: docker-compose run app bundle exec rubocop
       - run:
           name: Rspec
-          command: docker-compose run app bundle exec rspec spec
+          command: docker-compose run app rbundle exec rspec spec
       - run:
           name: docker-compose down
           command: docker-compose down
