--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: sleep 5
       - run:
           name: "before_test: setup db"
-          command: docker-compose run app rails db:migrate:reset RAILS_ENV=test
+          command: docker-compose run app rails db:migrate:reset RAILS_ENV=test RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
       - run:
           name: Rubocop
           command: docker-compose run app bundle exec rubocop
